2008-08-11  Don Porter  <dgp@users.sourceforge.net>

	* library/http/http.tcl:        Bump http version to 2.7.1 to account
	* library/http/pkgIndex.tcl:    for [Bug 2046486] bug fix.  This
	* unix/Makefile.in:             release of http now requires a
	* win/Makefile.in:              dependency on Tcl 8.5 to be able to
	* win/makefile.bc:              use the unsigned formats in the
	* win/makefile.vc:              [binary scan] command.

2008-08-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/http/http.tcl: crc field from zlib data should be treated as
	unsigned for 64bit support [Bug 2046846]

2008-08-10  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclProc.c: completely removed ProcCompileProc, which was
	a fix for [Bug 1482718]. This is not needed at least since
	varReform, where the local variable data at runtime is read from
	the CallFrame and/or the LocalCache.
	
2008-08-09  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c:    slight cleanup
	* generic/tclCompile.h:
	* generic/tclExecute.c: 

2008-08-09  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tclExecute.c:	fix warnings.

	* generic/tclOOMethod.c (PushMethodCallFrame):	fix uninitialized efi
							name field.

	* tests/lrange.test (lrange-1.17):	add test cleanup; whitespace.

2008-08-08  Don Porter  <dgp@users.sourceforge.net>S

	* changes:	Updates for 8.6a2 release.

2008-08-08  Kevin Kenny   <kennykb@acm.org>

	* library/tzdata/CET:
	* library/tzdata/MET:
	* library/tzdata/Africa/Casablanca:
	* library/tzdata/America/Eirunepe:
	* library/tzdata/America/Rio_Branco:
	* library/tzdata/America/Santarem:
	* library/tzdata/America/Argentina/San_Luis:
	* library/tzdata/Asia/Karachi:
	* library/tzdata/Europe/Belgrade:
	* library/tzdata/Europe/Berlin:
	* library/tzdata/Europe/Budapest:
	* library/tzdata/Europe/Sofia:
	* library/tzdata/Indian/Mauritius:  Olson's tzdata2008e.
	
2008-08-07  Miguel Sofer  <msofer@users.sf.net>
